# advent-of-code

./: .gitignore  README.md
day-01/: Cargo.toml
day-01/src/: part1.rs
day-02/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: part2.rs
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: part1.rs
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: part1.rs
day-09/: Cargo.toml
day-09/src/: part1.rs
day-11/: Cargo.toml
day-11/src/: part1.rs
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml  puzzle.md
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml  puzzle.md
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/src/: part2.rs
day-16/: Cargo.toml
day-16/src/: part2.rayon.rs
day-17/: Cargo.toml
day-17/src/: part1.rs
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/src/: part1.rs
scaffolding/: Cargo.toml
scaffolding/src/: part1.rs  part2.rs
year-2023/day-02/: Cargo.toml
year-2024/: Cargo.toml
year-2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day06_runner.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day14_runner.rs  day15.rs  day15_runner.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day5.rs  day6.rs  day6_runner.rs  day7.rs  day9.rs  lib.rs  main.rs
year-2025/: Cargo.toml
year-2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  main.rs
(+39 files in other folders)
