[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[lib]
name = "days"
path = "src/lib.rs"

[dependencies]
aoc-macro = { path = "../tools/aoc-macro" }
colored = "2.2.0"
crossterm = "0.28.1"
rayon = "1.10.0"

[[bin]]
name = "runner_day06"
path = "src/day06_runner.rs"

[[bin]]
name = "runner_day14"
path = "src/day14_runner.rs"

[[bin]]
name = "runner_day15"
path = "src/day15_runner.rs"
