cargo-features = ["profile-rustflags"]

[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[lib]
name = "days"
path = "src/lib.rs"

[dependencies]
aoc-macro = { path = "../tools/aoc-macro" }
rayon = "1.11.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"
rustflags = ["-C", "target-cpu=native"]
